# thoughnuts

./: .env.example  .gitignore  Cargo.toml  README.md
.claude/: settings.local.json
migrations/: 001_initial.sql  002_user_types.sql  003_user_activities.sql
posts/: hello-web3.md
src/: config.rs  main.rs
src/db/: sqlite.rs
src/handlers/: activity.rs  admin.rs  mod.rs  posts.rs  tips.rs  wallet.rs
src/markdown/: parser.rs
src/models/: activity.rs  mod.rs  post.rs  tip.rs  user.rs
src/routes/: activity.rs  auth.rs  mod.rs  tipping.rs
src/web3/: ethereum.rs  solana.rs
static/css/: styles.css
static/js/: wallet.js
templates/: base.html  index.html  post.html  posts.html
templates/admin/: editor.html  readers.html
templates/components/: footer.html  navbar.html  tip_button.html  wallet_modal.html
