[package]
name = "vibe_p_one"
version = "0.1.0"
edition = "2021"
description = "A Web3-enabled blog with wallet authentication and crypto tipping"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Templates
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }

# Markdown
pulldown-cmark = { version = "0.10", features = ["simd"] }
syntect = "5"

# Web3 - Ethereum
ethers = { version = "2", features = ["abigen"] }
siwe = "0.6"

# Web3 - Solana (lightweight - signature verification via ed25519)
ed25519-dalek = { version = "2", features = ["std"] }
bs58 = "0.5"

# Utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
hex = "0.4"
rand = "0.8"
url = "2"
gray_matter = "0.2"
html-escape = "0.2"
